# contextidx

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  ctxidx.md  demo_merge.py  pyproject.toml
.benchmarks/Darwin-CPython-3.12-64bit/: 0001_baseline.json
.github/workflows/: ci.yml
.hypothesis/constants/: 0a9e1f4cdaff0687  0d2a90c0280e8d57  1228647d940d2b9e  22194dddf780d2d6  24b33b012496ec74  27c2bfa9da9d6f25  305d0ebffc269089  32d47f437271b9a0  36650634bae95cef  3bbfc4419c83982c  4829d50893a774e4  4de4425b7b76972c  4dee9fd8691bce7d  5034a8ff1277151e  58a358c56a8b08a5  5f250756c052c66d  62b8880daf1ce922  692cb92413cfd6a9  7153f881d9a7f376  94b8f74640fb7568  9c794622c74fd5fc  aceb312ec2159215  af41597fcf4516c8  ba588a854644bdf7  cb59d9a9e9f16cd2  ce357f6adc0ad47a  e5ab623e4cf48c25  ef5236bf082f6390  f141eeab5b0dee7c  f501822c2bcff50c  f9396d48abcf658c  fa3515a631ca4823
benchmarks/: bench_concurrent.py  bench_conflict.py  bench_consolidation_scale.py  bench_decay.py  bench_e2e.py  bench_hybrid.py  bench_read_path.py  bench_scoring.py  bench_wal.py  bench_write.py  conftest.py
contextidx/: __init__.py  config.py  contextidx.py  exceptions.py  server.py
contextidx/_core/: __init__.py  _fallback.py
contextidx/backends/: __init__.py  base.py  chroma.py  pgvector.py  pinecone.py  qdrant.py  weaviate.py
contextidx/core/: __init__.py  conflict_resolver.py  consolidation.py  context_unit.py  decay_engine.py  embedding.py  query_type.py  reranker.py  scoring_engine.py  temporal_graph.py
contextidx/integrations/: langchain.py  llamaindex.py
contextidx/store/: __init__.py  backend_metadata_store.py  base.py  migrations.py  postgres_schema.py  postgres_store.py  schema.py  sqlite_store.py
contextidx/utils/: __init__.py  batch_writer.py  conflict_queue.py  math_utils.py  pending_buffer.py  redis_pending_buffer.py  wal.py
docs/: api_reference.md  backends.md  configuration.md  quickstart.md  scaling.md
examples/: demo_merge.py
memorybench-provider/: README.md
memorybench-provider/contextidx/: index.ts  prompts.ts
scripts/: ablation_study.py  pgvector_baseline.py  run_memorybench.sh  setup_pgvector.sh
src/: lib.rs
tests/: conftest.py
tests/test_store/: test_wal.py  (+5 more)
(+38 files in other folders)
