[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "contextidx"
version = "1.0.0"
description = "A temporal context layer for your existing vector database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Shashi", email = "shashi@contextidx.dev" },
]
keywords = ["vector-database", "temporal", "context", "ai", "agents", "rag"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
pgvector = [
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.0",
]
weaviate = [
    "weaviate-client>=4.7.0",
]
qdrant = [
    "qdrant-client>=1.7.0",
]
chroma = [
    "chromadb>=0.4.0",
]
pinecone = [
    "pinecone>=3.0.0",
]
postgres = [
    "asyncpg>=0.29.0",
]
redis = [
    "redis>=5.0.0",
]
all = [
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.0",
    "weaviate-client>=4.7.0",
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
    "pinecone>=3.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/shashi/contextidx"
Documentation = "https://contextidx.dev"
Repository = "https://github.com/shashi/contextidx"

[tool.maturin]
module-name = "contextidx._core_rs"
python-source = "."
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "bench_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 100
